# vision_asistida

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_cam.py
.github/workflows/: python-package.yml
src/vision_asistida/: traductor.py  video_prueba.py  vision_asistida.py  vision_gui.py
tests/: test_basic.py
